# 4ti2

./: .gitignore  Makefile.am  configure.ac
.github/workflows/: test.yml
lib/: stdio.h  stdlib.h  string.h
m4/: gmp-check.m4
src/4ti2/: 4ti2API.cpp  4ti2_config.h.in  4ti2xx.h  Makefile.am  gmp_integer.h  gmp_rational.h
src/groebner/: Bounded.cpp  CircuitOptions.cpp  DataType.h  Euclidean.cpp  Globals.cpp  Makefile.am  QSolveAPI.cpp  QSolveAlgorithm.cpp  VectorArrayAPI.cpp  VectorArrayAPI.h  WalkAlgorithm.cpp
src/util/: Makefile.am  genmodel.c  myheader.h  output.c
src/zsolve/: 4ti2API.cpp  Heuristics.hpp  Integer.h  Makefile.am  VectorArrayAPI.hpp
test/groebner/: Makefile.am
test/markov/: Makefile.am
test/qsolve/: Makefile.am
test/qsolve/api/: Makefile.am  circuits_main  qsolve_main  rays_main  test_input_conversion_64_to_gmp  test_input_conversion_gmp.cpp  test_input_conversion_gmp_to_64
test/zsolve/api/: Makefile.am  test_zsolve_api
